--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
-git rm --cached *.exe
-git commit -m "Remove exe files from repository"
-git push origin main
-
+git init
+git add .
+git commit -m "Initial commit"
+git branch -M main
+git remote add origin https://github.com/CodeWithAnjali1/DSA.git
+git push -u origin main
